# swagger.json
@@ -9,12 +9,28 @@
   "basePath": "/",
   "schemes": ["https"],
   "produces": ["application/json"],
+  "securityDefinitions": {
+    "oauth2": {
+      "type": "oauth2",
+      "authorizationUrl": "https://accounts.google.com/o/oauth2/auth",
+      "flow": "implicit",
+      "scopes": {
+        "profile": "Access to user profile",
+        "email": "Access to user email"
+      }
+    }
+  },
   "paths": {
     "/api/users": {
       "get": {
         "tags": ["Users"],
         "summary": "Get all users",
         "operationId": "getUsers",
+        "security": [
+          {
+            "oauth2": ["profile", "email"]
+          }
+        ],
         "responses": {
           "200": {
             "description": "A list of users",
@@ -147,6 +163,11 @@
         "tags": ["Books"],
         "summary": "Get all books",
         "operationId": "getBooks",
+        "security": [
+          {
+            "oauth2": ["profile", "email"]
+          }
+        ],
         "responses": {
           "200": {
             "description": "A list of books",
